:bug: solving cards wraping style

--- a/src/app/presentation/shared/presentation-card/presentation-card.component.css
+++ b/src/app/presentation/shared/presentation-card/presentation-card.component.css
@@ -1,31 +1,14 @@
-h2 {
-  font-family: "lato-black";
-  font-size: 2.5rem;
-}
+
 img {
   width: 3.5rem;
 }
 h3 {
   font-size: 16px;
   font-weight: 700;
-  margin-bottom: 1em;
-  padding-top: 15px;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
-.card-box {
-  align-items: stretch;
-  box-sizing: border-box;
-  overflow: hidden;
-  padding: 2.5rem;
-  transition: all 0.2s ease-in-out;
-}
-.card-box:hover {
-  background-color: var(--background-effect);
-  color: white;
+p {
+  width: 100%;
 }
 
-@media (max-width: 1024px) {
-  .card-box {
-    width: 50%;
-    transition: all 0.2s ease-in-out;
-  }
-}
